--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,54 @@
 @import './common';
 @import './example';
+
+.wrapper {
+  background-color: rgb(48, 9, 100);
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.input {
+  border: none;
+  border-radius: 4px;
+  width: 350px;
+  height: 40px;
+  padding: 20px 15px;
+  font-size: 18px;
+  display: inline-flex;
+  &:hover,
+  &:focus {
+    outline: none;
+  }
+}
+
+.btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 40px;
+  color: black;
+  background-color: rgb(221, 217, 217);
+  border: none;
+  border-radius: 0 4px 4px 0;
+  margin: 0;
+  padding: 5px;
+  cursor: pointer;
+  svg {
+    fill: currentColor;
+    height: 100%;
+    width: 100%;
+  }
+}
