--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -49,3 +49,35 @@
     width: 100%;
   }
 }
+
+.container {
+  margin: 0 auto;
+  padding: 10px 15px;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 20px;
+  justify-content: center;
+}
+
+.photo-card {
+  width: calc((100% - 120px) / 4);
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.67);
+}
+
+.photo-card__link {
+  display: block;
+  img {
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
+  }
+}
+
+.info {
+  display: flex;
+  text-align: center;
+}
