--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -53,6 +53,7 @@
 .container {
   margin: 0 auto;
   padding: 10px 15px;
+  text-align: center;
 }
 
 .gallery {
@@ -80,4 +81,40 @@
 .info {
   display: flex;
   text-align: center;
+}
+
+.load-more {
+  margin-top: 40px;
+}
+
+.load-more {
+  text-decoration: none;
+  display: inline-block;
+  margin: 10px 20px;
+  padding: 10px 30px;
+  position: relative;
+  border: 2px solid #800ff1;
+
+  color: #800ff1;
+  font-family: 'Montserrat', sans-serif;
+  transition: 0.4s;
+  cursor: pointer;
+}
+.load-more:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  border: 2px solid rgba(0, 0, 0, 0);
+  transition: 0.4s;
+}
+.load-more:hover:after {
+  border-color: #800ff1;
+  width: calc(100% - 10px);
+  height: calc(100% + 10px);
 }
