--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -64,13 +64,12 @@
   justify-content: center;
 }
 
-.photo-card {
-  width: calc((100% - 120px) / 4);
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.67);
-}
-
 .photo-card__link {
   display: block;
+  width: calc((100% - 120px) / 4);
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.67);
+  text-decoration: none;
+  color: #000000;
   img {
     width: 100%;
     height: 220px;
